objects/BE_Prospect_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>BE_Prospect_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to store the Broker Express Prospect Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BE Prospect ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Broker_Express</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Used to store the Transaction ID that is sent in the message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <description>Opportunity Integration Broker Express Related table.  Used to store the Broker Express Prospect ID and additional information that will help report on issues where the Prospect record was created but the Prospect ID didn't get written to this table.</description>
    <label>BE Prospect Lookup</label>
    <nameField>
        <displayFormat>BE-{0000}</displayFormat>
        <label>Broker Express Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BE Prospect Lookup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>